<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_bike"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/add_new_bike" />
        <item
            android:id="@+id/nav_bikes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/bikes" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/maps" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/log_out" />
    </group>

</menu>
