<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddBikeFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/identifier_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/identifier_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/identificador"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/content_layout"
            app:layout_constraintTop_toBottomOf="@+id/identifier_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/content_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/add_button"
            app:layout_constraintTop_toBottomOf="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_button"/>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>